<resources>
    <string name="app_name">Encryphant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_login">First Login</string>
    <string name="title_activity_account_manager">Account Manager</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="title_activity_show_account">Show Account</string>
    <string name="title_activity_security_questions">Security Questions</string>
    <string name="title_activity_reset_pin">Reset PIN</string>
    <string name="title_activity_settings">Settings</string>
    <string name="login_logo">login logo</string>
    <string name="login">Login</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="dickbutt">dickbutt</string>
    <string name="copypassimage">copypassimage</string>
    <string name="copyuserimage">copyuserimage</string>
    <string name="show_password">Show Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="hiddenpassword">•••••••</string>
    <string name="please_make_sure_it_s_really_you">Please make sure it\'s really you</string>
    <string name="it_s_me">It\'s me</string>
    <string name="please_enter_answer">Please enter answer</string>
    <string name="cancel">Cancel</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm">Confirm</string>
    <string name="account_name">Account name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="generate_custom_password">Generate custom password</string>
    <string name="pin">PIN</string>
    <string name="question_1">Question 1</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer">Answer</string>
    <string name="please_setup_your_security_settings">Please setup your security settings</string>
    <string name="setup">Setup</string>
    <string name="answer_3">Answer 3</string>
    <string name="question_3">Question 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="question_2">Question 2</string>
    <string name="please_reset_your_pin">Please reset your PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="answer_cannot_be_empty">Answer cannot be empty</string>
    <string name="question_cannot_be_empty">Question cannot be empty</string>
    <string name="pin_length_warning">PIN length should be between 4 and 8</string>
    <string name="enter_old_pin">Enter old PIN</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>
