<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_changedialog_oldpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/pin"
        android:hint="@string/enter_old_pin"
        android:inputType="numberPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_changedialog_newpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/pin"
        android:hint="@string/enter_new_pin"
        android:inputType="numberPassword"
        android:textAlignment="center" />

</LinearLayout>