<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FirstLoginActivity"
    tools:showIn="@layout/activity_first_login">

    <TextView
        android:id="@+id/tv_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/please_setup_your_security_settings"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_setup_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:autofillHints="PIN"
        android:ems="10"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/et_setup_q1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setup" />

    <EditText
        android:id="@+id/et_setup_q1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/question"
        android:ems="10"
        android:hint="@string/question_1"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/et_setup_a1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_pin" />

    <EditText
        android:id="@+id/et_setup_a1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/answer"
        android:ems="10"
        android:hint="@string/answer_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_setup_q2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_q1" />

    <EditText
        android:id="@+id/et_setup_q2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/question"
        android:ems="10"
        android:hint="@string/question_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_setup_a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_a1" />

    <EditText
        android:id="@+id/et_setup_a2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/answer"
        android:ems="10"
        android:hint="@string/answer_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_setup_q3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_q2" />

    <EditText
        android:id="@+id/et_setup_q3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/question"
        android:ems="10"
        android:hint="@string/question_3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_setup_a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_a2" />

    <EditText
        android:id="@+id/et_setup_a3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/answer"
        android:ems="10"
        android:hint="@string/answer_3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_setup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_q3" />

    <Button
        android:id="@+id/button_setup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/setup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setup_a3" />

</androidx.constraintlayout.widget.ConstraintLayout>